--- a/configuration.properties
+++ b/configuration.properties
@@ -21,4 +21,5 @@ zeroUrl = http://zero.webappsecurity.com/
 zeruKullaniciAdi = username
 zeroPassword = password
 
+herokuUrl = https://the-internet.herokuapp.com/add_remove_elements/
 
