--- a/configuration.properties
+++ b/configuration.properties
@@ -23,3 +23,5 @@ zeroPassword = password
 
 herokuUrl = https://the-internet.herokuapp.com/add_remove_elements/
 
+demoUrl = http://demo.guru99.com/test/guru99home/
+guruSeleniumUrl = https://www.guru99.com/live-Selenium-project.html
